[gd_scene load_steps=32 format=3 uid="uid://cjoxowca2f0ah"]

[ext_resource type="Script" path="res://scripts/levels/level_2_scene.gd" id="1_bvjfg"]
[ext_resource type="Texture2D" uid="uid://b5wxr5ogwrfp7" path="res://assets/areaout.png" id="2_58ntl"]
[ext_resource type="PackedScene" uid="uid://5203tlw2qe7m" path="res://scenes/game elements/player.tscn" id="3_ood4h"]
[ext_resource type="Texture2D" uid="uid://cags3h0ymnrwd" path="res://assets/backgrounds/level-2-bg.png" id="3_xqd2i"]
[ext_resource type="PackedScene" uid="uid://0ylviwxcfcef" path="res://scenes/game elements/tile.tscn" id="4_gnyli"]
[ext_resource type="PackedScene" uid="uid://by5kh4t7we0tt" path="res://scenes/attacker/swarm.tscn" id="5_e6xx7"]
[ext_resource type="PackedScene" uid="uid://bxdqvxcd77h1f" path="res://scenes/attacker/dungbeetle.tscn" id="5_evxi6"]
[ext_resource type="PackedScene" uid="uid://bkdghj7xakjws" path="res://scenes/game elements/barrier.tscn" id="6_vhhxo"]
[ext_resource type="PackedScene" uid="uid://buq8anlvndhfv" path="res://scenes/defender/pistoleer.tscn" id="7_e0kl1"]
[ext_resource type="Script" path="res://scripts/game elements/Hotbar.gd" id="8_i7owq"]
[ext_resource type="PackedScene" uid="uid://kmtcq2r071eq" path="res://scenes/game elements/slot.tscn" id="9_n4iw5"]
[ext_resource type="PackedScene" uid="uid://boeiqbwn75xh3" path="res://scenes/defender/bomber.tscn" id="10_v2bdy"]
[ext_resource type="FontFile" uid="uid://dacw3y1r8f4dy" path="res://assets/fonts/LeagueSpartan-ExtraBold.ttf" id="11_0rnm4"]
[ext_resource type="PackedScene" uid="uid://da11alxwr8dog" path="res://scenes/defender/defender.tscn" id="11_4e62b"]
[ext_resource type="PackedScene" uid="uid://dlko8km15b8qe" path="res://scenes/defender/flamethrower.tscn" id="12_5yngc"]
[ext_resource type="PackedScene" uid="uid://d0wdsr22md8yk" path="res://scenes/defender/machinegunner.tscn" id="13_5fl6a"]
[ext_resource type="PackedScene" uid="uid://du5m84ymrpspn" path="res://scenes/defender/railgunner.tscn" id="14_nwiab"]
[ext_resource type="PackedScene" uid="uid://d13l16psqi467" path="res://scenes/defender/sniper.tscn" id="15_or0pi"]
[ext_resource type="PackedScene" uid="uid://c3bkqjer131nu" path="res://scenes/game elements/endline.tscn" id="16_u1jtv"]
[ext_resource type="PackedScene" uid="uid://pk0dyp5doh51" path="res://scenes/panels/defeat_panel.tscn" id="17_butgh"]
[ext_resource type="PackedScene" uid="uid://bvls14o2bg56v" path="res://scenes/panels/pause_panel.tscn" id="18_fhcr0"]
[ext_resource type="PackedScene" uid="uid://bavj4xfxsd4u6" path="res://scenes/panels/victory_panel.tscn" id="19_h5p5o"]
[ext_resource type="Texture2D" uid="uid://busia4y08tl6e" path="res://assets/icons/pause-icon.png" id="21_wwi7r"]
[ext_resource type="PackedScene" uid="uid://1e0lehg71t5l" path="res://scenes/game elements/wall.tscn" id="24_clp5c"]
[ext_resource type="PackedScene" uid="uid://cidd1kmt5io4n" path="res://scenes/game elements/progress_bar.tscn" id="25_whmk5"]
[ext_resource type="AudioStream" uid="uid://cjt15wksgyr5a" path="res://assets/music/energy-hum-29083.mp3" id="26_uitle"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mh4fc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tbqed"]
texture = ExtResource("21_wwi7r")
modulate_color = Color(0.566298, 0.566298, 0.566298, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_prmno"]
texture = ExtResource("21_wwi7r")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ko3q"]
texture = ExtResource("21_wwi7r")
modulate_color = Color(0.566298, 0.566298, 0.566298, 1)

[sub_resource type="Theme" id="Theme_5t4f4"]
Button/styles/focus = SubResource("StyleBoxEmpty_mh4fc")
Button/styles/hover = SubResource("StyleBoxTexture_tbqed")
Button/styles/normal = SubResource("StyleBoxTexture_prmno")
Button/styles/pressed = SubResource("StyleBoxTexture_6ko3q")

[node name="Level_2" type="Node2D"]
script = ExtResource("1_bvjfg")
metadata/_edit_horizontal_guides_ = [264.0]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.65098, 0.658824, 0.572549, 0.698039)
offset_left = 8.0
offset_top = -80.0
offset_right = 2616.0
offset_bottom = 1341.0
scale = Vector2(0.518425, 0.551397)
texture = ExtResource("2_58ntl")
expand_mode = 2

[node name="Level-2-bg" type="Sprite2D" parent="."]
position = Vector2(536, 328)
scale = Vector2(0.656, 0.656)
texture = ExtResource("3_xqd2i")

[node name="Tiles" type="Node" parent="."]

[node name="Tile1" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(280, 174)

[node name="Tile2" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(281, 275)

[node name="Tile3" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(280, 375)

[node name="Tile4" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(280, 475)

[node name="Tile5" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(280, 576)

[node name="Tile6" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(376, 174)

[node name="Tile7" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(376, 275)

[node name="Tile8" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(376, 375)

[node name="Tile9" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(376, 475)

[node name="Tile10" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(376, 575)

[node name="Tile11" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(473, 174)

[node name="Tile12" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(473, 275)

[node name="Tile13" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(473, 375)

[node name="Tile14" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(473, 475)

[node name="Tile15" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(473, 576)

[node name="Tile16" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(572, 174)

[node name="Tile17" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(572, 275)

[node name="Tile18" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(572, 375)

[node name="Tile19" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(572, 475)

[node name="Tile20" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(572, 576)

[node name="Tile21" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(670, 174)

[node name="Tile22" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(670, 275)

[node name="Tile23" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(670, 375)

[node name="Tile24" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(670, 475)

[node name="Tile25" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(670, 575)

[node name="Tile26" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(767, 174)

[node name="Tile27" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(767, 275)

[node name="Tile28" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(767, 375)

[node name="Tile29" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(767, 475)

[node name="Tile30" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(767, 576)

[node name="Tile31" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(865, 174)

[node name="Tile32" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(866, 275)

[node name="Tile33" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(865, 375)

[node name="Tile34" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(866, 475)

[node name="Tile35" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(865, 576)

[node name="Tile36" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(961, 174)

[node name="Tile37" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(962, 275)

[node name="Tile38" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(961, 375)

[node name="Tile39" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(962, 475)

[node name="Tile40" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(961, 576)

[node name="Tile41" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1057, 174)

[node name="Tile42" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1058, 275)

[node name="Tile43" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1057, 376)

[node name="Tile44" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1058, 475)

[node name="Tile45" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1057, 576)

[node name="Tile46" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1224, 160)

[node name="Tile47" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1224, 256)

[node name="Tile48" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1224, 352)

[node name="Tile49" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1224, 456)

[node name="Tile50" parent="Tiles" instance=ExtResource("4_gnyli")]
position = Vector2(1224, 544)

[node name="Enemies" type="Node" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1222, 174)

[node name="Enemy2" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1214, 174)

[node name="Enemy3" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1222, 174)

[node name="Enemy4" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1214, 174)

[node name="Enemy5" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1222, 174)

[node name="Enemy6" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1214, 174)

[node name="Enemy7" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1222, 174)

[node name="Enemy8" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1214, 174)

[node name="Enemy9" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1222, 174)

[node name="Enemy10" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1214, 174)

[node name="Enemy11" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1224, 275)

[node name="Enemy12" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1216, 275)

[node name="Enemy13" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1224, 275)

[node name="Enemy14" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1216, 275)

[node name="Enemy15" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1224, 275)

[node name="Enemy16" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1216, 275)

[node name="Enemy17" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1224, 275)

[node name="Enemy18" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1216, 275)

[node name="Enemy19" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1224, 275)

[node name="Enemy20" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1216, 275)

[node name="Enemy21" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 376)

[node name="Enemy22" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 376)

[node name="Enemy23" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 376)

[node name="Enemy24" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 376)

[node name="Enemy25" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 376)

[node name="Enemy26" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 376)

[node name="Enemy27" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 376)

[node name="Enemy28" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 376)

[node name="Enemy29" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 376)

[node name="Enemy30" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 376)

[node name="Enemy31" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 475)

[node name="Enemy32" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 475)

[node name="Enemy33" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 475)

[node name="Enemy34" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 475)

[node name="Enemy35" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 475)

[node name="Enemy36" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 475)

[node name="Enemy37" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 475)

[node name="Enemy38" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 475)

[node name="Enemy39" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 475)

[node name="Enemy40" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 475)

[node name="Enemy41" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 576)

[node name="Enemy42" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 576)

[node name="Enemy43" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 576)

[node name="Enemy44" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 576)

[node name="Enemy45" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 576)

[node name="Enemy46" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 576)

[node name="Enemy47" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 576)

[node name="Enemy48" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 576)

[node name="Enemy49" parent="Enemies" instance=ExtResource("5_evxi6")]
position = Vector2(1230, 576)

[node name="Enemy50" parent="Enemies" instance=ExtResource("5_e6xx7")]
position = Vector2(1222, 576)

[node name="Player" parent="." instance=ExtResource("3_ood4h")]
z_index = 1
position = Vector2(217, 195)

[node name="Timer" type="Timer" parent="."]

[node name="Character_attack_timer" type="Timer" parent="."]

[node name="Barrier" parent="." instance=ExtResource("6_vhhxo")]
position = Vector2(1152, 64)

[node name="Character" parent="." instance=ExtResource("7_e0kl1")]
visible = false
position = Vector2(424, 616)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Hotbar" type="VBoxContainer" parent="UI"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.988
anchor_right = 0.5
anchor_bottom = 0.988
offset_left = -560.0
offset_top = -518.224
offset_right = -520.0
offset_bottom = -268.224
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(2.41511, 2.32864)
size_flags_horizontal = 8
size_flags_vertical = 10
script = ExtResource("8_i7owq")
metadata/_edit_use_anchors_ = true

[node name="Slot" parent="UI/Hotbar" instance=ExtResource("9_n4iw5")]
layout_mode = 2

[node name="Slot2" parent="UI/Hotbar" instance=ExtResource("9_n4iw5")]
layout_mode = 2

[node name="Slot3" parent="UI/Hotbar" instance=ExtResource("9_n4iw5")]
layout_mode = 2

[node name="Slot4" parent="UI/Hotbar" instance=ExtResource("9_n4iw5")]
layout_mode = 2

[node name="Slot5" parent="UI/Hotbar" instance=ExtResource("9_n4iw5")]
layout_mode = 2

[node name="Hotbar_Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="Hotbar_Timer"]
offset_left = 112.0
offset_top = 128.0
offset_right = 208.0
offset_bottom = 616.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("11_0rnm4")
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Defender_List" type="Node2D" parent="."]
position = Vector2(2152, 408)

[node name="bomber" parent="Defender_List" instance=ExtResource("10_v2bdy")]

[node name="defender" parent="Defender_List" instance=ExtResource("11_4e62b")]

[node name="flamethrower" parent="Defender_List" instance=ExtResource("12_5yngc")]

[node name="machinegunner" parent="Defender_List" instance=ExtResource("13_5fl6a")]

[node name="pistoleer" parent="Defender_List" instance=ExtResource("7_e0kl1")]

[node name="railgunner" parent="Defender_List" instance=ExtResource("14_nwiab")]

[node name="sniper" parent="Defender_List" instance=ExtResource("15_or0pi")]

[node name="Endline" parent="." instance=ExtResource("16_u1jtv")]
position = Vector2(96, 120)

[node name="Panels" type="Node" parent="."]

[node name="DefeatPanel" parent="Panels" instance=ExtResource("17_butgh")]
visible = false
top_level = true
z_index = 2
scale = Vector2(1.00071, 1.00071)

[node name="PausePanel" parent="Panels" instance=ExtResource("18_fhcr0")]
visible = false

[node name="VictoryPanel" parent="Panels" instance=ExtResource("19_h5p5o")]
visible = false
z_index = 2
scale = Vector2(0.999549, 0.999549)

[node name="PauseButton" type="Button" parent="."]
offset_left = 1024.0
offset_top = 10.0
offset_right = 1152.0
offset_bottom = 82.0
scale = Vector2(0.429844, 0.75577)
theme = SubResource("Theme_5t4f4")

[node name="Wall" type="Node" parent="."]

[node name="Wall" parent="Wall" instance=ExtResource("24_clp5c")]
position = Vector2(153, 17)

[node name="Wall2" parent="Wall" instance=ExtResource("24_clp5c")]
position = Vector2(1121, 13)

[node name="Wall3" parent="Wall" instance=ExtResource("24_clp5c")]
position = Vector2(1119, 82)
rotation = 1.5708
scale = Vector2(1.5, 1.5)

[node name="Wall4" parent="Wall" instance=ExtResource("24_clp5c")]
position = Vector2(1118, 654)
rotation = 1.5708
scale = Vector2(1.5, 1.5)

[node name="ProgressBar" parent="." instance=ExtResource("25_whmk5")]
visible = false
position = Vector2(493, 42)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26_uitle")
pitch_scale = 1.32
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Character_attack_timer" to="." method="_on_character_attack_timer_timeout"]
[connection signal="timeout" from="Hotbar_Timer" to="." method="_on_hotbar_timer_timeout"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
